# trading_journal

./: .gitignore  README.md  project_bootstrap.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: analytics.py  crud.py  health.py  schemas.py
backend/app/db/: __init__.py  connection.py  init_db.py  schema.sql  session.py
backend/app/models/: __init__.py
backend/app/repositories/: analytics.py  attachments.py  common.py  playbooks.py  psychology.py  reviews.py  tags.py  trades.py
backend/app/services/: __init__.py  analytics.py
backend/tests/: test_analytics_routes.py  test_crud_routes.py  test_database_initialization.py  test_psychology_routes.py  test_review_routes.py
docs/architecture/: post-phase2-audit.md
frontend/: package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/domain/: reviews.js  trades.js
frontend/src/pages/: DashboardPage.jsx  PlaybooksPage.jsx  PsychologyPage.jsx  ReviewsPage.jsx  SettingsPage.jsx  TradeDetailPage.jsx  TradesPage.jsx
frontend/src/styles/: global.css
