[project]
name = "trading-journal-backend"
version = "0.1.0"
description = "Local-first Python backend foundation for the Trading Journal app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "httpx2>=0.1,<1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
